<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:id="@+id/main_layout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000000">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/player_parent"
            app:layout_constraintEnd_toEndOf="@+id/player_parent"
            app:layout_constraintTop_toTopOf="@+id/player_parent"
            app:layout_constraintBottom_toBottomOf="@+id/player_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"/>
            <Button
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"/>
            <Button
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"/>
            <Button
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mute_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute"/>
            <Button
                android:id="@+id/volume_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volumeUp"/>
            <Button
                android:id="@+id/volume_down_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volumeDown"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/rewind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewind"/>
            <Button
                android:id="@+id/forward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"/>
            <Button
                android:id="@+id/full_screen_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullScreen"/>
        </LinearLayout>
        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actionText"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/debug_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>