<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:id="@+id/main_layout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/live_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000000">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/live_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/live_parent"
            app:layout_constraintEnd_toEndOf="@+id/live_parent"
            app:layout_constraintTop_toTopOf="@+id/live_parent"
            app:layout_constraintBottom_toBottomOf="@+id/live_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/live_parent">
        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"/>
        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"/>
        <Button
            android:id="@+id/full_screen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullScreen"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>